// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Category filter Default renders correctly 1`] = `
<jest>
  <nav
    aria-label="Category filter"
    class="ecl-category-filter"
    data-ecl-auto-init="CategoryFilter"
    data-ecl-category-filter=""
  >
    <ul
      class="ecl-category-filter__list"
    >
      <li
        class="ecl-category-filter__list-item"
      >
        <a
          class="ecl-category-filter__item ecl-category-filter__item--level-1"
          href="/example"
        >
          Item 1
        </a>
      </li>
      <li
        class="ecl-category-filter__list-item"
      >
        <button
          aria-controls="unique-id-2"
          aria-expanded="false"
          class="ecl-category-filter__item ecl-category-filter__item--level-1 ecl-category-filter__item--has-children"
        >
          Item 2 label
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-category-filter__item-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </button>
        <ul
          class="ecl-category-filter__list"
          id="unique-id-2"
        >
          <li
            class="ecl-category-filter__list-item"
          >
            <button
              aria-controls="unique-id-2-1"
              aria-expanded="false"
              class="ecl-category-filter__item ecl-category-filter__item--level-2 ecl-category-filter__item--has-children"
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-category-filter__item-icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#solid-arrow"
                />
              </svg>
              Item 2.1
            </button>
            <ul
              class="ecl-category-filter__list"
              id="unique-id-2-1"
            >
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 2.1.1
                </a>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <button
                  aria-controls="unique-id-2-1-2"
                  aria-expanded="false"
                  class="ecl-category-filter__item ecl-category-filter__item--level-3 ecl-category-filter__item--has-children"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-category-filter__item-icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#solid-arrow"
                    />
                  </svg>
                  Item 2.1.2
                </button>
                <ul
                  class="ecl-category-filter__list"
                  id="unique-id-2-1-2"
                >
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 2.1.2 a
                    </a>
                  </li>
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 2.1.2 b
                    </a>
                  </li>
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 2.1.2 c
                    </a>
                  </li>
                </ul>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 2.1.3
                </a>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 2.1.4
                </a>
              </li>
            </ul>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.2
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.3
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.4
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.5
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.6
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.7
            </a>
          </li>
        </ul>
      </li>
      <li
        class="ecl-category-filter__list-item"
      >
        <button
          aria-controls="unique-id-3"
          aria-expanded="false"
          class="ecl-category-filter__item ecl-category-filter__item--level-1 ecl-category-filter__item--has-children"
        >
          Item 3 with a very long label
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-category-filter__item-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </button>
        <ul
          class="ecl-category-filter__list"
          id="unique-id-3"
        >
          <li
            class="ecl-category-filter__list-item"
          >
            <button
              aria-controls="unique-id-3-1"
              aria-expanded="false"
              class="ecl-category-filter__item ecl-category-filter__item--level-2 ecl-category-filter__item--has-children"
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-category-filter__item-icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#solid-arrow"
                />
              </svg>
              Item 3.1
            </button>
            <ul
              class="ecl-category-filter__list"
              id="unique-id-3-1"
            >
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 3.1.1
                </a>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <button
                  aria-controls="unique-id-3-1-2"
                  aria-expanded="false"
                  class="ecl-category-filter__item ecl-category-filter__item--level-3 ecl-category-filter__item--has-children"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-category-filter__item-icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#solid-arrow"
                    />
                  </svg>
                  Item 3.1.2
                </button>
                <ul
                  class="ecl-category-filter__list"
                  id="unique-id-3-1-2"
                >
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 3.1.2 a
                    </a>
                  </li>
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 3.1.2 b
                    </a>
                  </li>
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 3.1.2 c
                    </a>
                  </li>
                </ul>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 3.1.3
                </a>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 3.1.4
                </a>
              </li>
            </ul>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 3.2
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 3.3
            </a>
          </li>
        </ul>
      </li>
      <li
        class="ecl-category-filter__list-item"
      >
        <button
          aria-controls="unique-id-4"
          aria-expanded="false"
          class="ecl-category-filter__item ecl-category-filter__item--level-1 ecl-category-filter__item--has-children"
        >
          Item 4 label
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-category-filter__item-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </button>
        <ul
          class="ecl-category-filter__list"
          id="unique-id-4"
        >
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.1
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.2
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.3 with a very long label going on 2 lines
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.4
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.5
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.6
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</jest>
`;

exports[`Category filter Default renders correctly with extra attributes 1`] = `
<jest>
  <nav
    aria-label="Category filter"
    class="ecl-category-filter"
    data-ecl-auto-init="CategoryFilter"
    data-ecl-category-filter=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <ul
      class="ecl-category-filter__list"
    >
      <li
        class="ecl-category-filter__list-item"
      >
        <a
          class="ecl-category-filter__item ecl-category-filter__item--level-1"
          href="/example"
        >
          Item 1
        </a>
      </li>
      <li
        class="ecl-category-filter__list-item"
      >
        <button
          aria-controls="unique-id-2"
          aria-expanded="false"
          class="ecl-category-filter__item ecl-category-filter__item--level-1 ecl-category-filter__item--has-children"
        >
          Item 2 label
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-category-filter__item-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </button>
        <ul
          class="ecl-category-filter__list"
          id="unique-id-2"
        >
          <li
            class="ecl-category-filter__list-item"
          >
            <button
              aria-controls="unique-id-2-1"
              aria-expanded="false"
              class="ecl-category-filter__item ecl-category-filter__item--level-2 ecl-category-filter__item--has-children"
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-category-filter__item-icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#solid-arrow"
                />
              </svg>
              Item 2.1
            </button>
            <ul
              class="ecl-category-filter__list"
              id="unique-id-2-1"
            >
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 2.1.1
                </a>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <button
                  aria-controls="unique-id-2-1-2"
                  aria-expanded="false"
                  class="ecl-category-filter__item ecl-category-filter__item--level-3 ecl-category-filter__item--has-children"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-category-filter__item-icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#solid-arrow"
                    />
                  </svg>
                  Item 2.1.2
                </button>
                <ul
                  class="ecl-category-filter__list"
                  id="unique-id-2-1-2"
                >
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 2.1.2 a
                    </a>
                  </li>
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 2.1.2 b
                    </a>
                  </li>
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 2.1.2 c
                    </a>
                  </li>
                </ul>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 2.1.3
                </a>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 2.1.4
                </a>
              </li>
            </ul>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.2
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.3
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.4
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.5
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.6
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.7
            </a>
          </li>
        </ul>
      </li>
      <li
        class="ecl-category-filter__list-item"
      >
        <button
          aria-controls="unique-id-3"
          aria-expanded="false"
          class="ecl-category-filter__item ecl-category-filter__item--level-1 ecl-category-filter__item--has-children"
        >
          Item 3 with a very long label
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-category-filter__item-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </button>
        <ul
          class="ecl-category-filter__list"
          id="unique-id-3"
        >
          <li
            class="ecl-category-filter__list-item"
          >
            <button
              aria-controls="unique-id-3-1"
              aria-expanded="false"
              class="ecl-category-filter__item ecl-category-filter__item--level-2 ecl-category-filter__item--has-children"
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-category-filter__item-icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#solid-arrow"
                />
              </svg>
              Item 3.1
            </button>
            <ul
              class="ecl-category-filter__list"
              id="unique-id-3-1"
            >
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 3.1.1
                </a>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <button
                  aria-controls="unique-id-3-1-2"
                  aria-expanded="false"
                  class="ecl-category-filter__item ecl-category-filter__item--level-3 ecl-category-filter__item--has-children"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-category-filter__item-icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#solid-arrow"
                    />
                  </svg>
                  Item 3.1.2
                </button>
                <ul
                  class="ecl-category-filter__list"
                  id="unique-id-3-1-2"
                >
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 3.1.2 a
                    </a>
                  </li>
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 3.1.2 b
                    </a>
                  </li>
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 3.1.2 c
                    </a>
                  </li>
                </ul>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 3.1.3
                </a>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 3.1.4
                </a>
              </li>
            </ul>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 3.2
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 3.3
            </a>
          </li>
        </ul>
      </li>
      <li
        class="ecl-category-filter__list-item"
      >
        <button
          aria-controls="unique-id-4"
          aria-expanded="false"
          class="ecl-category-filter__item ecl-category-filter__item--level-1 ecl-category-filter__item--has-children"
        >
          Item 4 label
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-category-filter__item-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </button>
        <ul
          class="ecl-category-filter__list"
          id="unique-id-4"
        >
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.1
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.2
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.3 with a very long label going on 2 lines
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.4
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.5
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.6
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</jest>
`;

exports[`Category filter Default renders correctly with extra class names 1`] = `
<jest>
  <nav
    aria-label="Category filter"
    class="ecl-category-filter custom-button custom-button--test"
    data-ecl-auto-init="CategoryFilter"
    data-ecl-category-filter=""
  >
    <ul
      class="ecl-category-filter__list"
    >
      <li
        class="ecl-category-filter__list-item"
      >
        <a
          class="ecl-category-filter__item ecl-category-filter__item--level-1"
          href="/example"
        >
          Item 1
        </a>
      </li>
      <li
        class="ecl-category-filter__list-item"
      >
        <button
          aria-controls="unique-id-2"
          aria-expanded="false"
          class="ecl-category-filter__item ecl-category-filter__item--level-1 ecl-category-filter__item--has-children"
        >
          Item 2 label
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-category-filter__item-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </button>
        <ul
          class="ecl-category-filter__list"
          id="unique-id-2"
        >
          <li
            class="ecl-category-filter__list-item"
          >
            <button
              aria-controls="unique-id-2-1"
              aria-expanded="false"
              class="ecl-category-filter__item ecl-category-filter__item--level-2 ecl-category-filter__item--has-children"
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-category-filter__item-icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#solid-arrow"
                />
              </svg>
              Item 2.1
            </button>
            <ul
              class="ecl-category-filter__list"
              id="unique-id-2-1"
            >
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 2.1.1
                </a>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <button
                  aria-controls="unique-id-2-1-2"
                  aria-expanded="false"
                  class="ecl-category-filter__item ecl-category-filter__item--level-3 ecl-category-filter__item--has-children"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-category-filter__item-icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#solid-arrow"
                    />
                  </svg>
                  Item 2.1.2
                </button>
                <ul
                  class="ecl-category-filter__list"
                  id="unique-id-2-1-2"
                >
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 2.1.2 a
                    </a>
                  </li>
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 2.1.2 b
                    </a>
                  </li>
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 2.1.2 c
                    </a>
                  </li>
                </ul>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 2.1.3
                </a>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 2.1.4
                </a>
              </li>
            </ul>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.2
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.3
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.4
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.5
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.6
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 2.7
            </a>
          </li>
        </ul>
      </li>
      <li
        class="ecl-category-filter__list-item"
      >
        <button
          aria-controls="unique-id-3"
          aria-expanded="false"
          class="ecl-category-filter__item ecl-category-filter__item--level-1 ecl-category-filter__item--has-children"
        >
          Item 3 with a very long label
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-category-filter__item-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </button>
        <ul
          class="ecl-category-filter__list"
          id="unique-id-3"
        >
          <li
            class="ecl-category-filter__list-item"
          >
            <button
              aria-controls="unique-id-3-1"
              aria-expanded="false"
              class="ecl-category-filter__item ecl-category-filter__item--level-2 ecl-category-filter__item--has-children"
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-category-filter__item-icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#solid-arrow"
                />
              </svg>
              Item 3.1
            </button>
            <ul
              class="ecl-category-filter__list"
              id="unique-id-3-1"
            >
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 3.1.1
                </a>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <button
                  aria-controls="unique-id-3-1-2"
                  aria-expanded="false"
                  class="ecl-category-filter__item ecl-category-filter__item--level-3 ecl-category-filter__item--has-children"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-category-filter__item-icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#solid-arrow"
                    />
                  </svg>
                  Item 3.1.2
                </button>
                <ul
                  class="ecl-category-filter__list"
                  id="unique-id-3-1-2"
                >
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 3.1.2 a
                    </a>
                  </li>
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 3.1.2 b
                    </a>
                  </li>
                  <li
                    class="ecl-category-filter__list-item"
                  >
                    <a
                      class="ecl-category-filter__item ecl-category-filter__item--level-4"
                      href="/example"
                    >
                      Item 3.1.2 c
                    </a>
                  </li>
                </ul>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 3.1.3
                </a>
              </li>
              <li
                class="ecl-category-filter__list-item"
              >
                <a
                  class="ecl-category-filter__item ecl-category-filter__item--level-3"
                  href="/example"
                >
                  Item 3.1.4
                </a>
              </li>
            </ul>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 3.2
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 3.3
            </a>
          </li>
        </ul>
      </li>
      <li
        class="ecl-category-filter__list-item"
      >
        <button
          aria-controls="unique-id-4"
          aria-expanded="false"
          class="ecl-category-filter__item ecl-category-filter__item--level-1 ecl-category-filter__item--has-children"
        >
          Item 4 label
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-180 ecl-category-filter__item-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </button>
        <ul
          class="ecl-category-filter__list"
          id="unique-id-4"
        >
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.1
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.2
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.3 with a very long label going on 2 lines
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.4
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.5
            </a>
          </li>
          <li
            class="ecl-category-filter__list-item"
          >
            <a
              class="ecl-category-filter__item ecl-category-filter__item--level-2"
              href="/example"
            >
              Item 4.6
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</jest>
`;
